--- a/package.json
+++ b/package.json
@@ -18,11 +18,18 @@
   },
   "homepage": "https://github.com/oliviergoulet5/personal-site#readme",
   "devDependencies": {
+    "@babel/core": "^7.17.9",
+    "@babel/preset-env": "^7.16.11",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "babel-loader": "^8.2.4",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
+    "postcss": "^8.4.12",
+    "postcss-loader": "^6.2.1",
+    "postcss-preset-env": "^7.4.3",
+    "tailwindcss": "^3.0.23",
     "ts-loader": "^9.2.8",
     "typescript": "^4.6.3",
     "webpack": "^5.71.0",
@@ -30,6 +37,7 @@
     "webpack-dev-server": "^4.8.1"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   }
