--- a/package.json
+++ b/package.json
@@ -38,7 +38,11 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.4",
+    "i18next": "^21.6.14",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next-http-backend": "^1.4.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-i18next": "^11.16.2"
   }
 }
