--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "i18next-http-backend": "^1.4.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-i18next": "^11.16.2"
+    "react-i18next": "^11.16.2",
+    "react-icons": "^4.3.1"
   }
 }
