--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "webpack-dev-server": "^4.8.1"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.5",
     "autoprefixer": "^10.4.4",
     "i18next": "^21.6.14",
     "i18next-browser-languagedetector": "^6.1.4",
